--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		
 	</head>
 
-	<body><div> <iframe id ="iframe" width="560" height="315" src="https://www.youtube.com/embed/nJkU5p2qeWg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>  </div>
+	<body><div> <iframe id ="iframe" width="560" height="315" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>  </div>
 		<script src="main.js"></script>
 		<script>
 			// Our Javascript will go here.
